remove deprecated WebSecurityConfigurerAdapter