@@ -23,27 +23,28 @@ import alfio.repository.system.ConfigurationRepository;
 import alfio.repository.user.AuthorityRepository;
 import alfio.repository.user.UserRepository;
 import alfio.util.ClockProvider;
+import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.core.annotation.Order;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.authentication.DisabledException;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
+import org.springframework.security.config.annotation.web.configurers.ExpressionUrlAuthorizationConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.web.SecurityFilterChain;
 
 import java.nio.charset.StandardCharsets;
 import java.security.MessageDigest;
 import java.time.ZonedDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static alfio.config.authentication.support.AuthenticationConstants.*;
 
 @Configuration(proxyBeanMethods = false)
 @Order(0)
-public class APITokenAuthWebSecurity extends WebSecurityConfigurerAdapter {
+public class APITokenAuthWebSecurity {
 
     public static final String API_KEY = "Api key ";
     private final UserRepository userRepository;
@@ -59,8 +60,8 @@ public class APITokenAuthWebSecurity extends WebSecurityConfigurerAdapter {
     }
 
     //https://stackoverflow.com/a/48448901
-    @Override
-    protected void configure(HttpSecurity http) throws Exception {
+    @Bean
+    public SecurityFilterChain configure(HttpSecurity http) throws Exception {
 
         APIKeyAuthFilter filter = new APIKeyAuthFilter();
         filter.setAuthenticationManager(authentication -> {
@@ -92,15 +93,20 @@ public class APITokenAuthWebSecurity extends WebSecurityConfigurerAdapter {
             return new APITokenAuthentication(
                 authentication.getPrincipal(),
                 authentication.getCredentials(),
-                authorityRepository.findRoles(apiKey).stream().map(SimpleGrantedAuthority::new).collect(Collectors.toList()));
+                authorityRepository.findRoles(apiKey).stream().map(SimpleGrantedAuthority::new).toList());
         });
 
 
-        http.requestMatcher(RequestTypeMatchers::isTokenAuthentication)
+        return http.requestMatcher(RequestTypeMatchers::isTokenAuthentication)
             .sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS)
             .and().csrf().disable()
-            .authorizeRequests()
-            .antMatchers(ADMIN_PUBLIC_API + "/system/**").hasRole(SYSTEM_API_CLIENT)
+            .authorizeRequests(APITokenAuthWebSecurity::configureMatchers)
+            .addFilter(filter)
+            .build();
+    }
+
+    private static void configureMatchers(ExpressionUrlAuthorizationConfigurer<HttpSecurity>.ExpressionInterceptUrlRegistry auth) {
+        auth.antMatchers(ADMIN_PUBLIC_API + "/system/**").hasRole(SYSTEM_API_CLIENT)
             .antMatchers(ADMIN_PUBLIC_API + "/**").hasRole(API_CLIENT)
             .antMatchers(ADMIN_API + "/check-in/event/*/attendees").hasRole(SUPERVISOR)
             .antMatchers(ADMIN_API + "/check-in/*/label-layout").hasAnyRole(OPERATOR, SUPERVISOR, SPONSOR)
@@ -110,8 +116,7 @@ public class APITokenAuthWebSecurity extends WebSecurityConfigurerAdapter {
             .antMatchers(ADMIN_API + "/**").denyAll()
             .antMatchers(HttpMethod.POST, "/api/attendees/sponsor-scan").hasRole(SPONSOR)
             .antMatchers(HttpMethod.GET, "/api/attendees/*/ticket/*").hasAnyRole(OPERATOR, SUPERVISOR, API_CLIENT)
-            .antMatchers("/**").authenticated()
-            .and().addFilter(filter);
+            .antMatchers("/**").authenticated();
     }
 
     private static boolean apiKeyMatches(String input, alfio.model.system.Configuration systemApiKeyConfiguration) {
